# duckbot

./: .dockerignore  .gitignore  Containerfile  README.md  deployment.yaml  env.example  pyproject.toml  run-bot.sh  run-kdb.sh  users_report.py
.github/workflows/: build-container.yml  run-tests.yml
db/: start.q
duckbot/: bot.py  capycoin.py  cmd.py  config.py  horoscope.py  kdb.py  stats.py  tarot.py  text.py  weather.py
tests/: test_bot.py  test_cmd.py  test_horoscope.py  test_kdb.py  test_stats.py  test_tarot.py  test_text.py  test_weather.py
