[project]
name = "duckbot"
version = "0.0.1"
description = "A discord bot for giggles"
authors = [{ name = "Lucas Martin-King" }]
requires-python = ">=3.12.0,<3.13"
dependencies = [
    "discord.py>=2.3.2,<3",
    "spacy>=3.7.2,<3.8",
    "en-core-web-md",
    "requests>=2.32.4,<3",
    "contractions>=0.1.72,<0.2",
    "sparklines>=0.4.2,<0.5",
    "async-lru>=2.0.4,<3",
    "numpy<2", # Limited by spacy compatability
    "kola>=2.2.0",
    "parsel>=1.11.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 200
